<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pet_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.vnguyen629.petprotector.PetListActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:text="@string/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/petListTextView"
        android:textSize="36sp"
        android:textColor="@color/dark_blue"
        android:layout_gravity="center" />

    <ImageView
        app:srcCompat="@drawable/none"
        android:id="@+id/petImageView"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:layout_height="150dp"
        android:layout_width="150dp"
        android:clickable="true"
        android:onClick="selectPetImage"
        android:contentDescription="@string/add_pet_image_description" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/petNameEditText"
        android:hint="@string/pet_name_text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/petDetailsEditText"
        android:hint="@string/pet_details_text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/petPhoneEditText"
        android:hint="@string/pet_phone_text" />

    <Button
        android:text="@string/add_button_text"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:id="@+id/addPetButton"
        android:layout_gravity="center"
        android:onClick="addPet" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/petListView" />
</LinearLayout>
