<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pet_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.vnguyen629.petprotector.PetDetailsActivity">

    <ImageView
        app:srcCompat="@drawable/none"
        android:id="@+id/petDetailsImageView"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/details_image_description"
        android:layout_width="200dp"
        android:layout_height="250dp" />

    <TextView
        android:text="@string/pet_details_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/petDetailsDetailsTextView"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_below="@+id/petDetailsNameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/pet_phone_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/petDetailsPhoneTextView"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_below="@+id/petDetailsDetailsTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/pet_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/petDetailsNameTextView"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_below="@+id/petDetailsImageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
